@@ -3,13 +3,18 @@ package tfw.value;
 /**
  * An byte value constraint.
  */
-public class ByteConstraint extends RangeConstraint {
+public class ByteConstraint extends RangeConstraint<Byte> {
     /**
      * Creates a constraint with the specified attributes.
      * @param min the minimum legal value.
      * @param max the maximum legal value.
      */
     public ByteConstraint(byte min, byte max) {
-        super(Byte.class, new Byte(min), new Byte(max), true, true);
+        super(Byte.class, Byte.valueOf(min), Byte.valueOf(max), true, true);
+    }
+
+    @Override
+    protected int compareTo(Byte left, Byte right) {
+        return left.compareTo(right);
     }
 }
